--- a/form.html
+++ b/form.html
@@ -7,11 +7,11 @@
     <title>Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <style>
         body {
             font-family: "Ubuntu", sans-serif;
@@ -19,7 +19,7 @@
     </style>
 </head>
 
-<body>
+<body class="vh-100">
     <!-- HEADER -->
     <header class="shadow-lg">
         <nav class="navbar navbar-expand-md collapse d-block d-md-none bg-dark" data-bs-theme="dark">
@@ -44,9 +44,9 @@
 
     <!-- DASHBOARD -->
     <div class="container-fluid">
-        <div class="row">
+        <div class="row vh-100">
             <!-- Sidebar -->
-            <div id="navbarSupportedContent" class="sidebar collapse vh-100 col-md-4 col-lg-3 d-md-block bg-dark">
+            <div id="navbarSupportedContent" class="sidebar collapse col-md-4 col-lg-3 d-md-block bg-dark">
                 <a href="/"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none border-bottom border-2 border-secondary border-opacity-50">
                     <span class="fs-4 mb-4 mt-5">Bootstrap Dashboard</span>
@@ -85,27 +85,156 @@
                     </li>
                 </ul>
                 <hr />
-                <div class="dropdown">
+                <div class="dropdown pb-3">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="https://github.com/mdo.png" alt="" width="32" height="32"
                             class="rounded-circle me-2" />
                         <strong>_Username_</strong>
                     </a>
-                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                        <li><a class="dropdown-item" href="#">New project...</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <ul
+                        class="dropdown-menu dropdown-menu-dark text-small shadow border border-bottom border-secondary">
+                        <li class=""><a class="dropdown-item" href="#">Impostazioni</a></li>
+                        <li><a class="dropdown-item" href="#">Profilo</a></li>
                         <li>
-                            <hr class="dropdown-divider" />
+                            <hr class="dropdown-divider border border-bottom border-secondary" />
                         </li>
-                        <li><a class="dropdown-item" href="#">Sign out</a></li>
+                        <li><a class="dropdown-item" href="#">Disconettiti</a></li>
                     </ul>
                 </div>
             </div>
 
             <!-- MAIN -->
-            <main class="col-md-8 col-lg-9">Form</main>
+            <main class="col-md-8 col-lg-9 overflow-y-scroll">
+                <section class="col-12 text-center fs-5 fw-light h-25">
+                    <h2 class="p-4">Crea nuovo prodotto</h2>
+                    <p>
+                        I campi contrassegnati con un (*) sono obbligatori.
+                        <br />
+                        Le immagini devono essere in formato PNG e non devono superare i 4
+                        MB di dimensione
+                    </p>
+                </section>
+                <div class="col-12 d-flex flex-column flex-md-row h-75">
+                    <div class="col-12 col-lg-7 p-3">
+                        <form class="row">
+                            <div class="mb-3 justify-content-between row">
+                                <label for="inputNome" class="col-sm-2 col-form-label">Nome</label>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control" id="inputNome"
+                                        placeholder="Samsung Galaxy 10 Plus" />
+                                </div>
+                            </div>
+                            <div class="mb-3 justify-content-between row">
+                                <label for="inputPrezzo" class="col-sm-2 col-form-label">Prezzo</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" id="inputPrezzo" placeholder="99.00" />
+                                </div>
+                            </div>
+                            <div class="mb-3 justify-content-between row">
+                                <label for="inputNome" class="col-sm-2 col-form-label">Nome</label>
+                                <div class="col-sm-8">
+                                    <select class="form-select form-select-md mb-3" aria-label="Large select example">
+                                        <option selected>--- Seleziona ---</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-floating">
+                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                                    style="height: 200px"></textarea>
+                                <label for="floatingTextarea2" class="ms-2 text-secondary mw-100">Inserisci la
+                                    descrizione del
+                                    prodotto, massimo 1000
+                                    caratteri</label>
+                            </div>
+                            <div class="my-3">
+                                <input class="form-control" type="file" id="formFileMultiple" multiple />
+                            </div>
+                            <div class="col-12">
+                                <div class="btn-group w-75" role="group" aria-label="Basic outlined example">
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        Disponibile
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        Esaurito
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        Fuori produzione
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        In arrivo
+                                    </button>
+                                </div>
+                                <button class="btn btn-primary w-25 my-3">Salva</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-12 col-lg-5 p-3">
+                        <ul class="list-group">
+                            <li class="list-group-item d-flex">
+                                <div class="my-2 mx-3 d-flex align-items-start">
+                                    <input type="checkbox" name="" id="" class="form-check-input">
+                                </div>
+                                <section>
+                                    <strong class="fw-medium">fotocamera principale</strong>
+                                    <p class="m-0 fw-light">foto di alta qualità e registrare video nitidi</p>
+                                </section>
+                            </li>
+                            <li class="list-group-item d-flex">
+                                <div class="my-2 mx-3 d-flex align-items-start">
+                                    <input type="checkbox" name="" id="" class="form-check-input">
+                                </div>
+                                <section>
+                                    <strong class="fw-medium">schermo OLED</strong>
+                                    <p class="m-0 fw-light">offre colori vividi per un'esperienza visiva straordinaria
+                                    </p>
+                                </section>
+                            </li>
+                            <li class="list-group-item d-flex">
+                                <div class="my-2 mx-3 d-flex align-items-start">
+                                    <input type="checkbox" name="" id="" class="form-check-input">
+                                </div>
+                                <section>
+                                    <strong class="fw-medium">processore Octa-core</strong>
+                                    <p class="m-0 fw-light">prestazioni fluide e veloci per eseguire le applicazioni più
+                                        esigenti</p>
+                                </section>
+                            </li>
+                            <li class="list-group-item d-flex">
+                                <div class="my-2 mx-3 d-flex align-items-start">
+                                    <input type="checkbox" name="" id="" class="form-check-input">
+                                </div>
+                                <section>
+                                    <strong class="fw-medium">ricarica wireless</strong>
+                                    <p class="m-0 fw-light">consente di ricaricare lo smartphone comodamente senza l'uso
+                                        di cavi</p>
+                                </section>
+                            </li>
+                            <li class="list-group-item d-flex">
+                                <div class="my-2 mx-3 d-flex align-items-start">
+                                    <input type="checkbox" name="" id="" class="form-check-input">
+                                </div>
+                                <section>
+                                    <strong class="fw-medium">connessione 5G</strong>
+                                    <p class="m-0 fw-light">navigazione ultra veloce e streaming senza interruzioni</p>
+                                </section>
+                            </li>
+                            <li class="list-group-item d-flex">
+                                <div class="my-2 mx-3 d-flex align-items-start">
+                                    <input type="checkbox" name="" id="" class="form-check-input">
+                                </div>
+                                <section>
+                                    <strong class="fw-medium">tecnologia NFC</strong>
+                                    <p class="m-0 fw-light">per effettuare pagamenti senza contatto</p>
+                                </section>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </main>
             <!-- /MAIN -->
         </div>
     </div>
