--- a/sponsorizations.html
+++ b/sponsorizations.html
@@ -85,21 +85,21 @@
                     </li>
                 </ul>
                 <hr />
-                <div class="dropdown">
+                <div class="dropdown pb-3">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="https://github.com/mdo.png" alt="" width="32" height="32"
                             class="rounded-circle me-2" />
                         <strong>_Username_</strong>
                     </a>
-                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                        <li><a class="dropdown-item" href="#">New project...</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <ul
+                        class="dropdown-menu dropdown-menu-dark text-small shadow border border-bottom border-secondary">
+                        <li class=""><a class="dropdown-item" href="#">Impostazioni</a></li>
+                        <li><a class="dropdown-item" href="#">Profilo</a></li>
                         <li>
-                            <hr class="dropdown-divider" />
+                            <hr class="dropdown-divider border border-bottom border-secondary" />
                         </li>
-                        <li><a class="dropdown-item" href="#">Sign out</a></li>
+                        <li><a class="dropdown-item" href="#">Disconettiti</a></li>
                     </ul>
                 </div>
             </div>
